--- a/changelog.txt
+++ b/changelog.txt
@@ -37,6 +37,19 @@ AvsPmod can only provide a user-friendly editor if he has no problems with the n
 If, for example, there is a '-' in the file name of the dll, AvsPmod will report it at startup, 
 please rename this dll and replace the '-' with a '_'
 
+--------------------------
+Version 2.7.0.4 [2022-01-17] GPo
+--------------------------
+*** The main reason for this release is information *** 
+Avisynth 3.71 final version has problems with prefetch and frame properties.
+AvsPmod also reads the frame properties when creating a clip, so avisynth hangs. 
+There are two ways to avoid this:
+Video > Display > YUV -> RGB > 'Read matrix from source or script' must be disabled.
+or
+Use Avisynth version 3.72 test 1, the problem was fixed here.
+This version is available on Doom9: https://forum.doom9.org/showthread.php?t=181351
+***
+* Error message handling improved  
 
 --------------------------
 Version 2.7.0.3 [2022-01-15] GPo
