--- a/changelog.txt
+++ b/changelog.txt
@@ -38,6 +38,26 @@ If, for example, there is a '-' in the file name of the dll, AvsPmod will report
 please rename this dll and replace the '-' with a '_'
 
 --------------------------
+Version 2.7.1.8 [2022-06-12] GPo, Milestone Edition
+--------------------------
+* New function Video > 'Split Clip on/off' (please read Help -> 'SplitClip readme')
+- the 'Split Clip' splits the main clip into 2 clips, and allows you to switch between 
+- a fast preview (without filters) and a normal preview (create a shortcut key for quick switching). 
+-
+* Editor new: Changing numbers or true/false with the mouse wheel (Help -> 'Number wheel readme').
+- select an area containing numbers, press Ctrl or Shift or both and use the mouse wheel. Ctrl = 1, Shift = 5, Both = 10
+- the first number group found is changed (maximum search depth for the first digit are 20 characters).
+- Recommended*: select the numbers or true/false with a double-click, no pressing of Ctrl or Shift is required. Numbers are then changed by 1
+- if the selection is made by double-click: 1.) The 'Preview filter' is updated immediately. 2.) The function must be deactivated by a single click.
+- true/false can now be changed either with (left down and right click) or (with the mouse wheel).
+-
+* New entry in tabs context menu 'Sort by name' sorts the tabs in alphabetical order.
+* Program options > Misc 2 > 'Mouse wheel scroll rate in editor (0 disabled)' can now be changed without restarting the program.
+* 'Reload all tabs' now first asks if the operation should be executed and the number of reloaded tabs is displayed in the status bar.
+* Rare bug fixed: when many sliders are created, the preview may be broken (python memory problem).
+* Fixed: When multi-line tab style and the number of tab lines was greater than 1, a drag & drop operation could be performed when switching a tab.
+
+--------------------------
 Version 2.7.1.7 [2022-05-29] GPo
 --------------------------
 ** If you use DPI zoom in windows read the changelog of version 2.7.1.6 **
